syntax = "proto3";

package communication;

option go_package = "github.com/AnishMulay/sandstore/proto/communication";

service MessageService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string from = 1;
  string type = 2;
  bytes payload = 3;
}

message MessageResponse {
  string code = 1;
  bytes body = 2;
  map<string, string> headers = 3;
}